--- a/frontend/package.json
+++ b/frontend/package.json
@@ -105,6 +105,7 @@
     "@babel/runtime": "^7.1.5",
     "@turf/bbox": "6.0.1",
     "chroma-js": "1.3.7",
+    "circular-dependency-plugin": "^5.0.2",
     "classnames": "^2.2.6",
     "d3": "^5.7.0",
     "d3-geo": "^1.11.1",
