--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -31,7 +31,7 @@ common: &default_settings
 development:
   <<: *default_settings
   app_name: Trase (Development)
-  monitor_mode: false
+  # monitor_mode: false
 
 test:
   <<: *default_settings
