--- a/frontend/package.json
+++ b/frontend/package.json
@@ -115,6 +115,7 @@
     "chroma-js": "1.3.7",
     "classnames": "^2.2.6",
     "d3": "^5.7.0",
+    "d3-format": "^1.3.2",
     "d3-geo": "^1.11.1",
     "d3-geo-projection": "^2.4.1",
     "d3-plugins-sankey": "^1.2.1",
