--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "cartodb": "0.5.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
+    "docz": "^0.13.7",
     "docz-theme-default": "^0.13.7",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.8.0",
@@ -102,8 +103,7 @@
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.4",
-    "docz": "^0.13.7"
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -148,6 +148,7 @@
     "react-simple-maps": "^0.12.1",
     "react-tether": "^1.0.3",
     "react-transition-group": "^2.5.0",
+    "react-virtualized": "^9.21.0",
     "react-window": "^1.2.4",
     "recharts": "^1.3.6",
     "redux": "^4.0.1",
